--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!----------------------------------------------------------------------------------------------->
 <body bgcolor="lightgray">
   <center>
+    <h1>Калькулятор індивідуального завдання</h1>
     <fieldset class="fset-main">
       <legend class="fset-legend">
         <table>
