--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </table>
       </legend>
       <div id="content" class="content">
-        <h2>Інструкція:</h2>
+        <h2>Як отримати свій варіант завдання?</h2>
         1. Введіть спочатку ім'я а потім призвіще українською мовою.<br>
         2. Виберіть номер лабораторно-практичної роботи.<br>
         3. Натисніть [OK] щоб отримати індивідуальні параметри завдання.
