--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <tr>
             <td><input id="inp-fullname" class="inp-fullname" type="text" placeholder="Ім'я Призвіще" size="20"/></td>
             <td>
-              <select id="sel-widn">
+              <select id="sel-widn" class="sel-widn">
                 <option selected>01</option>
                 <option>02</option>
                 <option>03</option>
@@ -35,7 +35,7 @@
                 <option>05</option>
               </select>    
             </td>
-            <td><button id="button-gen">OK</button></td>
+            <td><button id="button-gen" class="button-gen">OK</button></td>
           </tr>
           </tbody>
         </table>
