--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
   function rand_range(rand, from, to) {
     return rand() * (to - from) + from;
   }
+</script>
+
+<script>
   function lab_pract_01(rand) {
     console.log('Лабораторно-практична робота №1');
     const randge = function(from, to) { return rand_range(rand, from, to); }
@@ -97,7 +100,24 @@
     dfht += '</div>';
     $('#content').html(dfht)
     console.log(df);
-    console.log(`N = ${x_smm.toFixed(2)}`)
+    console.log(`N = ${x_smm.toFixed(2)}`);
+  }
+</script>
+
+<script>
+  function lab_pract_02(rand) {
+    console.log('Лабораторно-практична робота №2');
+    const randge = function(from, to) { return rand_range(rand, from, to); }
+    var digit_a = Math.floor(randge(0,10))
+    var digit_b = Math.floor(randge(0,10))
+    while (digit_a == digit_b)
+      digit_b = Math.floor(randge(0,10));
+    var dfht = '<div class="content01-div">'
+      +   '<h2>A = ' + digit_a + '</h2>'
+      +   '<h2>B = ' + digit_b + '</h2>'
+      + '</div>';
+    $('#content').html(dfht);
+    console.log(`A={digit_a}, B={digit_b}`);
   }
 </script>
 
@@ -119,6 +139,7 @@
 
       switch($('#sel-widn').val()) {
         case '01': lab_pract_01(rand); break;
+        case '02': lab_pract_02(rand); break;
         default:
           alert('Вибачте, ще не готово...');
           break;
