--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     const randge = function(from, to) { return rand_range(rand, from, to); }
     var min_corr = randge(0.3,0.5).toFixed(3);
     var dfht = '<div class="content01-div">'
-      +   '<h2>Мінімальна кореляцція: ' + min_corr + '</h2>'
+      +   '<h2>Мінімальна кореляція: ' + min_corr + '</h2>'
       + '</div>';
     $('#content').html(dfht);
     console.log(`min_corr={min_corr}`);
