Add dataset download for W06

--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
     ];
     n = Math.trunc(randge(0, test_questions.length));
     var dfht = '<div class="content01-div">'
+      + '<a href="dataset_w06.zip">dataset_w06.zip</a><hr>'
       + test_questions[n]
+      + ''
       + '</div>';
     $('#content').html(dfht);
     console.log(test_questions[n]);
