W05 message is improoved

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         case '02': lab_pract_02(rand); break;
         case '03': lab_pract_03(rand); break;
         case '04': lab_pract_04(rand); break;
-        case '05': alert('Зробіть власне фото для класифікації відповідно до завдання.'); break;
+        case '05': alert('Зробіть фото для класифікації власноруч відповідно до завдання.'); break;
         case '06': lab_pract_06(rand); break;
         case 'КР': coursework(rand); break
         default:
