--- a/index.html
+++ b/index.html
@@ -388,6 +388,9 @@
         case '06': lab_pract_06(rand); break;
         case '07': lab_pract_07(rand); break;
         case '08': lab_pract_08(rand); break;
+        case '09': alert('Дані такі ж самі, як і для лабораторно-практичної роботи №8.');
+          window.location.replace("?lab=08");
+          break;
         case 'КР': coursework(rand); break
         default:
           alert('Вибачте, ще не готово...');
