Repair syntax error

--- a/exam-questions.html
+++ b/exam-questions.html
@@ -44,7 +44,7 @@
   <tr><th>19</th><td>Задачі штучних нейронних мереж</td></tr>
   <tr><th>20</th><td>Функція активації. Властивості. Різновиди</td></tr>
   <tr><th>21</th><td>Теорема Колмогорова А.М. про універсальність штучних нейронних мереж</td></tr>
-  <tr><th>22</th><td>Проектування архітектури штучної нейронної мережі для вирішення практичної задачі</td></tr>
+  <tr><th>22</th><td>Проєктування архітектури штучної нейронної мережі для вирішення практичної задачі</td></tr>
   <tr><th>23</th><td>Види штучних нейронних мереж</td></tr>
   <tr><th>24</th><td>Навчання штучної нейронної мережі. Пряме розповсюдження сигналу. <code>Backpropagation</code></td></tr>
   <tr><th>25</th><td>Методи боротьби з недонавчанням штучних нейронних мереж</td></tr>
