--- a/exam-questions.html
+++ b/exam-questions.html
@@ -23,7 +23,7 @@
 <center>
 <table id="questions-table" class="questions-table">
   <tr><th colspan="2"><h1>Екзаменаційні питання</h1></th></tr>
-  <tr><th>1</th><td>Етапи процесу вивчення даних (етапи в <code>Data Science</code>)</td></tr>
+  <tr><th>1</th><td>Етапи процесу вивчення даних (етапи в <code>Data</code> <code>Science</code>)</td></tr>
   <tr><th>2</th><td>Машинне навчання з вчителем</td></tr>
   <tr><th>3</th><td>Машинне навчання без вчителя. Основні задачі</td></tr>
   <tr><th>4</th><td>Базові типи задач, які вирішують системи штучного інтелекту. Різниця між класифікацією та регресією</td></tr>
@@ -32,7 +32,7 @@
   <tr><th>7</th><td>Метод опорних векторів. Ядра <code>SVM</code></td></tr>
   <tr><th>8</th><td>Метод опорних векторів. Зв’язок зі штучними нейронними мережами</td></tr>
   <tr><th>9</th><td>Дерева рішень. Ліс рішень</td></tr>
-  <tr><th>10</th><td>Ансамблювання слабких моделей. <code>Bagging</code>, <code>Random Forest</code>, <code>Boosting</code></td></tr>
+  <tr><th>10</th><td>Ансамблювання слабких моделей. <code>Bagging</code>, <code>Random</code> <code>Forest</code>, <code>Boosting</code></td></tr>
   <tr><th>11</th><td>Лінійна регресія. Функція втрат. Метод градієнтного спуску</td></tr>
   <tr><th>12</th><td>Лінійна регресія. Вибір початкових значень параметрів, що мінімізують функцію втрат</td></tr>
   <tr><th>13</th><td>Нелінійна регресія. Функція втрат. Локальні мінімуми</td></tr>
@@ -56,19 +56,19 @@
   <tr><th>31</th><td>Проблеми навчання штучних нейронних мереж: вибухаючий градієнт</td></tr>
   <tr><th>32</th><td>Проблеми навчання штучних нейронних мереж: незбалансовані дані. Зважування класів для калібрування результату навчання</td></tr>
   <tr><th>33</th><td>Проблеми навчання штучних нейронних мереж: недостатня кількість даних. Аугментація</td></tr>
-  <tr><th>34</th><td>Чому так добре працюють нейронні мережі? Гіпотеза про многовид (<code>Manifold Hypothesis</code>)</td></tr>
+  <tr><th>34</th><td>Чому так добре працюють нейронні мережі? Гіпотеза про многовид (<code>Manifold</code> <code>Hypothesis</code>)</td></tr>
   <tr><th>35</th><td>Ембедінг слів. N-грами. <code>Word2Vec</code>. Взаємозв’язок між сенсами слів та косинусною подібністю їх векторів</td></tr>
   <tr><th>36</th><td>Глибокі повнозв’язні штучні нейронні мережі</td></tr>
   <tr><th>37</th><td>Згорткові штучні нейронні мережі. Відмінність згорткових нейронних мереж від повнозв’язних</td></tr>
   <tr><th>38</th><td>Згорткові штучні нейронні мережі. Ядра згортки. Фільтри</td></tr>
   <tr><th>39</th><td>Згорткові штучні нейронні мережі. Ефекти меж та доповнення. Крок згортки</td></tr>
   <tr><th>40</th><td>Згорткові штучні нейронні мережі. <code>MaxPooling</code>. <code>AveragePooling</code></td></tr>
-  <tr><th>41</th><td>Згорткові штучні нейронні мережі. <code>Computer Vision</code>. Основні задачі та приклади використання</td></tr>
+  <tr><th>41</th><td>Згорткові штучні нейронні мережі. <code>Computer</code> <code>Vision</code>. Основні задачі та приклади використання</td></tr>
   <tr><th>42</th><td>Навчання різниці між вхідним та вихідним сигналом. З’єднання з пропуском. Залишкові штучні нейронні мережі</td></tr>
   <tr><th>43</th><td>Залишкові штучні нейронні мережі як спосіб боротьби з деградацією точності</td></tr>
   <tr><th>44</th><td>Залишкові штучні нейронні мережі. Переваги та недоліки</td></tr>
   <tr><th>45</th><td>Моделювання та аналіз послідовностей. Рекурентні штучні нейронні мережі</td></tr>
-  <tr><th>46</th><td>Навчання рекурентних штучних нейронних мереж. Усічене зворотне поширення (<code>truncated backpropagation</code>)</td></tr>
+  <tr><th>46</th><td>Навчання рекурентних штучних нейронних мереж. Усічене зворотне поширення (<code>truncated</code> <code>backpropagation</code>)</td></tr>
   <tr><th>47</th><td>Обмеження класичних рекурентних штучних нейронних мереж</td></tr>
   <tr><th>48</th><td>Рекурентні штучні нейронні мережі. Процес запам’ятовування і забування. Вентильно рекурентна одиниця обчислення (<code>GRU</code>)</td></tr>
   <tr><th>49</th><td>Рекурентні штучні нейронні мережі. Довго-коротко термінова пам’ять (<code>LSTM</code>)</td></tr>
