--- a/index.html
+++ b/index.html
@@ -392,8 +392,9 @@
         case '09': alert('Дані такі ж самі, як і для лабораторно-практичної роботи №8.');
           window.location.replace("?lab=08");
           break;
-        case 'КР': coursework(rand); break
-        case 'ЕКЗ': window.location.replace("exam-questions.html");; break
+        case '10': window.location.replace("recommendations.html"); break;
+        case 'КР': coursework(rand); break;
+        case 'ЕКЗ': window.location.replace("exam-questions.html"); break;
         default:
           alert('Вибачте, ще не готово...');
           break;
