Recommendation empty page error repairing

--- a/recommendations.html
+++ b/recommendations.html
@@ -129,6 +129,7 @@
     if (widn.length == 0 || fullname.length == 0) {
       $('body').html('<center>'
         + '<h1>Ви не слухач курсу лекцій "Системи штучного інтелекту"</h1>'
+        + '<h4><i>Використовуйте для входу головну сторінку</i><h4>'
         + '</center>');
       return;
     }
