Message text edit

--- a/recommendations.html
+++ b/recommendations.html
@@ -188,7 +188,7 @@
         return;
       }
       if (fraud_detector < 2) {
-        alert(`⚠ Поставте хоча б дві оцінки для користувача "${NAME_ROW[NAME_ROW.length-1]}"`);
+        alert(`⚠ Поставте щонайменше дві гарні оцінки (4 або 5) для користувача "${NAME_ROW[NAME_ROW.length-1]}"`);
         return;
       }
       copy_to_clipboard(df + '\n');
