Add Lecture and Task links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </legend>
       <div id="content" class="content">
         <h2>Як отримати свій варіант завдання?</h2>
-        1. Введіть спочатку ім'я, а потім призвіще українською мовою.<br>
+        1. <span class="content-span">Введіть спочатку ім'я, а потім прізвище</span> українською мовою.<br>
         2. Виберіть номер лабораторно-практичної роботи.<br>
         3. Натисніть [OK] щоб отримати індивідуальні параметри завдання.
       </div>
@@ -83,6 +83,8 @@
     var smm = smm_min;
     var df = '';
     var dfht = '<div class="content01-div">'+
+    '<a href="https://colab.research.google.com/drive/1ZnJn9MDfPQWYoh2jjltb5x5ThtzTTQpd?usp=sharing">Лекція</a> | ' +
+    '<a href="https://colab.research.google.com/drive/1LvEPRHTndM8TREdo5ecIhUL_KwH1hopw?usp=sharing">Завдання</a><br/></br>' +
     '<table class="content01-table">'
     + '<tr>'
     +    '<th>Місяць</th>'
