--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     while (digit_a == digit_b)
       digit_b = Math.floor(randge(0,10));
     var dfht = '<div class="content01-div">'
-      '<a href="https://colab.research.google.com/drive/1BdeeRmQCame-wZmoEkQugS9QozH_i2Gr?usp=sharing">Лекція</a> | ' +
-      '<a href="https://colab.research.google.com/drive/10eDo-4dqiFYMUrIrTKuW4sIgVqVi6f9f?usp=sharing">Завдання</a><br/></br>' +
+      + '<a href="https://colab.research.google.com/drive/1BdeeRmQCame-wZmoEkQugS9QozH_i2Gr?usp=sharing">Лекція</a> | '
+      + '<a href="https://colab.research.google.com/drive/10eDo-4dqiFYMUrIrTKuW4sIgVqVi6f9f?usp=sharing">Завдання</a><br/></br>'
       +   '<h2>A = ' + digit_a + '</h2>'
       +   '<h2>B = ' + digit_b + '</h2>'
       + '</div>';
