--- a/index.html
+++ b/index.html
@@ -156,14 +156,18 @@
   function lab_pract_04(rand) {
     console.log('Лабораторно-практична робота №4');
     const randge = function(from, to) { return rand_range(rand, from, to); }
-    const s = Math.floor(randge(1.,5.9));
+    const s = Math.floor(randge(1.,9.99));
     var v = '<a href="AIS_W04.ipynb">AIS_W04.ipynb</a><hr>'
     switch(s) {
       case 1: v += 'Дощ -> осінь<br>Сніг -> ?'; break;
       case 2: v += 'Мама -> Тато<br>Сестра -> ?'; break;
-      case 3: v += 'Осло -> Норвегія<br>Бухарест -> ?'; break;
+      case 3: v += 'Студент -> Успішність<br>Призовник -> ?'; break;
       case 4: v += 'Південь -> Північ<br>Захід -> ?'; break;
       case 5: v += 'Стопка -> Горілка<br>Філіжанка -> ?'; break;
+      case 6: v += 'Мир -> Добробут<br>Життя -> ?'; break;
+      case 7: v += 'Знання -> Неуцтво<br>Наполегливість -> ?'; break;
+      case 8: v += 'Сміх -> Щастя<br>Сльози -> ?'; break;
+      case 9: v += 'Порада -> Інформація<br>Толк -> ?'; break;
     }
     v += '<hr>Сумаризація тексту № ' + Math.floor(randge(2.,8.9))
     var dfht = '<div class="content01-div">'
