Lab4 view updating

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     }
     v += '<hr>Сумаризація тексту № ' + Math.floor(randge(2.,8.9))
     var dfht = '<div class="content01-div">'
-      +   '<a href="https://colab.research.google.com/drive/1SD0e29FmIF5EzQswJMxH67wWmloxHN1m?usp=sharing">Лекція</a>, '
+      +   '<a href="https://colab.research.google.com/drive/1SD0e29FmIF5EzQswJMxH67wWmloxHN1m?usp=sharing">Лекція</a> | '
       +   '<a href="https://colab.research.google.com/drive/1LEmFyABPEz4e6SLkGItQpNK9qzU8p-y3?usp=sharing">Завдання</a><br/>'
       + v
       + '</div>';
