--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
     console.log(df);
 
     var dfht = '<div class="content01-div">'
+      + '<a href="https://colab.research.google.com/drive/1vwuWJUCfXN-PxMd9Oe6_sI1twZFIbjdB?usp=sharing">Лекція</a> | '
+      + '<a href="https://colab.research.google.com/drive/1mLMaxwHKDLunl0VPRpR8KDCFXWnvatuM?usp=sharing">Завдання</a><hr/>'
+      + '<center>';
     dfht += '<button class="content01-button" id="lab_pract_08_clipboard">Копіювати в Clipboard</button>';
     dfht += '<table class="content01-table">'
       + '<tr>'
