--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     var dfht = '<div class="content01-div">'
     +   '<a href="https://colab.research.google.com/drive/1YWgrWp5pMK2rC36j6hNG1Dhwdj2H-kBd?usp=sharing">Лекція</a> | '
     +   '<a href="https://colab.research.google.com/drive/1mJlwzrqiYtpiDAgootnSVHxP8d_KJJwb?usp=sharing">Завдання</a><hr/>'
-    +   'Індивідуальні дані ті ж самі, що і для <a href="taskcalc/?lab=08">лабораторної роботи №8</a>'
+    +   'Індивідуальні дані ті ж самі, що і для <a href="/taskcalc/?lab=08">лабораторної роботи №8</a>'
     + '</div>';
     $('#content').html(dfht)
   }
